Save the shortcuts in the krita.rc file

This has two advantages:

* krita now can remember the shortcuts of the user even if they install
a new version of krita with a higher kritarc version number
* for plugins, where kde tries to save the shortcuts to the installed rc
file (like /usr/share/apps/kritaplugins/modify_selection.rc) instead of
in a .kde rc file, we save and restore the shortcuts correctly.

Disadvantate: KDE natters on startup that setShortcut is used on a QAction
that's a KAction.

BUG:300480